infra/shared/istio/virtualservice-api.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: api-service
  namespace: banking-app
spec:
  hosts:
    - udaybankingapp.site
    - "*"
  gateways:
    - banking-gateway
  http:
    - match:
        - uri:
            prefix: /api
      rewrite:
        uri: /
      route:
        - destination:
            host: api-service.banking-app.svc.cluster.local
            subset: v1
            port:
              number: 3000
          weight: 90
        - destination:
            host: api-service.banking-app.svc.cluster.local
            subset: v2
            port:
              number: 3000
          weight: 10
