infra/shared/istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: frontend-service
  namespace: banking-app
spec:
  hosts:
    - udaybankingapp.site
    - "*"
  gateways:
    - banking-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: frontend-service.banking-app.svc.cluster.local
            port:
              number: 80
